# whimsical

./: .gitignore  README.md  dev-start.bat  docker-compose.yml  e2e_result.txt  e2e_test.py  mock_executor.py  run_tests.py  smoke_result.txt  smoke_result2.txt  smoke_result3.txt  smoke_test.py
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: agent_runtime.py  event_bus.py  executor_client.py  memory_service.py  model_gateway.py  planner.py  plugin_manager.py  state_store.py
backend/tests/: test_api.py
backend/whimsical_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md
executor-rs/: Cargo.toml  Dockerfile
executor-rs/src/: main.rs
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  styles.css
frontend/src/components/: EventLog.vue  MemoryRecall.vue  ModelSwitch.vue  PlanView.vue  PluginPanel.vue  TaskPanel.vue  ToolTrace.vue  WorkspacePanel.vue
sandbox/: build.gradle  hello.txt  settings.gradle  wb_1_capture.cpp
sandbox/app/: build.gradle
sandbox/app/src/main/: AndroidManifest.xml
sandbox/app/src/main/res/layout/: activity_main.xml
sandbox/app/src/main/res/values/: strings.xml
sandbox/memory/conversations/: demo-user.jsonl  e2e.jsonl  u1.jsonl
sandbox/memory/kv/default/: e2e_key.json  skey.json
(+19 files in other folders)
